<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="notifications_category"
        android:title="@string/notifications">

        <SwitchPreferenceCompat
            android:key="enable_notifications"
            android:title="@string/enable_notifications"
            android:summary="@string/enable_notifications_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="vibrate"
            android:title="@string/vibrate"
            android:summary="@string/vibrate_summary"
            android:defaultValue="true"
            android:dependency="enable_notifications" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="sync_category"
        android:title="@string/sync">

        <SwitchPreferenceCompat
            android:key="auto_sync"
            android:title="@string/auto_sync"
            android:summary="@string/auto_sync_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="sync_frequency"
            android:title="@string/sync_frequency"
            android:summary="@string/sync_frequency_summary"
            android:entries="@array/sync_frequency_entries"
            android:entryValues="@array/sync_frequency_values"
            android:defaultValue="60"
            android:dependency="auto_sync" />

    </PreferenceCategory>

</PreferenceScreen>
